force-app/main/default/objects/Marksheet__c/Marksheet__c.object-meta.xml
<CustomObject>
    <label>Marksheet</label>
    <nameField>
        <label>Exam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marksheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>