force-app/main/default/objects/Marksheet__c/fields/Computer_Science__c.field-meta.xml
<CustomField>
    <fullName>Computer_Science__c</fullName>
    <label>Computer Science</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>