force-app/main/default/objects/Marksheet__c/fields/English__c.field-meta.xml
<CustomField>
    <fullName>English__c</fullName>
    <label>English</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>