force-app/main/default/objects/Marksheet__c/fields/Mathematic__c.field-meta.xml
<CustomField>
    <fullName>Mathematic__c</fullName>
    <label>Mathematics</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>