force-app/main/default/objects/Marksheet__c/fields/Result_Status__c.field-meta.xml
<CustomField>
    <fullName>Result_Status__c</fullName>
    <label>Result Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PASS</fullName>
                <default>true</default>
                <label>PASS</label>
            </value>
            <value>
                <fullName>FAIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>