force-app/main/default/objects/Marksheet__c/fields/Science__c.field-meta.xml
<CustomField>
    <fullName>Science__c</fullName>
    <label>Science</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>